templates/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:16.1-alpine
        volumeMounts:
          - name: database
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: database
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: database
