templates/message-broker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-broker
spec:
  selector:
    matchLabels:
      app: message-broker
  template:
    metadata:
      labels:
        app: message-broker
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.12.11-management-alpine
          volumeMounts:
            - name: message-broker
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: message-broker
          persistentVolumeClaim:
            claimName: message-broker
---
apiVersion: v1
kind: Service
metadata:
  name: message-broker
spec:
  type: ClusterIP
  ports:
    - port: 5672
  selector:
    app: message-broker
